@@ -1,4 +1,3 @@
-import scalapb.compiler.Version.scalapbVersion
 import ReleaseTransformations._
 import sbt.Keys.excludeDependencies
 
@@ -6,10 +5,19 @@ ThisBuild / useCoursier := false
 
 Global / concurrentRestrictions += Tags.limit(Tags.Test, 1)
 
+lazy val javaVersion = Def.setting {
+  val v = sys.props.get("java.version")
+    .map(_.split("\\."))
+    .getOrElse(sys.error("Cannot detect JDK version"))
+
+  if (v(0) == "1") v(1).toInt else v(0).toInt
+}
+
+
 lazy val yupana = (project in file("."))
   .aggregate(
     api,
-    proto,
+    protocol,
     jdbc,
     utils,
     settings,
@@ -17,7 +25,7 @@ lazy val yupana = (project in file("."))
     cache,
     core,
     hbase,
-    akka,
+    netty,
     spark,
     schema,
     externalLinks,
@@ -46,15 +54,13 @@ lazy val api = (project in file("yupana-api"))
   )
   .disablePlugins(AssemblyPlugin)
 
-lazy val proto = (project in file("yupana-proto"))
+lazy val protocol = (project in file("yupana-protocol"))
   .settings(
-    name := "yupana-proto",
+    name := "yupana-protocol",
     allSettings,
-    pbSettings,
     scala3Settings,
     libraryDependencies ++= Seq(
-      "com.thesamet.scalapb"   %% "scalapb-runtime"      % scalapbVersion             % "protobuf"  exclude("com.google.protobuf", "protobuf-java"),
-      "com.google.protobuf"    %  "protobuf-java"        % versions.protobufJava force()
+      "org.scalatest"          %% "scalatest"            % versions.scalaTest         % Test
     )
   )
   .disablePlugins(AssemblyPlugin)
@@ -85,7 +91,7 @@ lazy val jdbc = (project in file("yupana-jdbc"))
   )
   .enablePlugins(BuildInfoPlugin)
   .enablePlugins(AssemblyPlugin)
-  .dependsOn(api, proto)
+  .dependsOn(api, protocol)
 
 lazy val utils = (project in file("yupana-utils"))
   .settings(
@@ -98,6 +104,7 @@ lazy val utils = (project in file("yupana-utils"))
     )
   )
   .dependsOn(api)
+  .disablePlugins(AssemblyPlugin)
 
 lazy val settings = (project in file("yupana-settings"))
   .settings(
@@ -109,6 +116,7 @@ lazy val settings = (project in file("yupana-settings"))
       "org.scalatest"               %% "scalatest"                     % versions.scalaTest % Test
     )
   )
+  .disablePlugins(AssemblyPlugin)
 
 lazy val metrics = (project in file("yupana-metrics"))
   .settings(
@@ -119,6 +127,7 @@ lazy val metrics = (project in file("yupana-metrics"))
       "com.typesafe.scala-logging"  %% "scala-logging"                 % versions.scalaLogging
     )
   )
+  .disablePlugins(AssemblyPlugin)
 
 lazy val cache = (project in file("yupana-cache"))
   .settings(
@@ -128,14 +137,10 @@ lazy val cache = (project in file("yupana-cache"))
     libraryDependencies ++= Seq(
       "javax.cache"                 %  "cache-api"                     % "1.1.1",
       "com.typesafe.scala-logging"  %% "scala-logging"                 % versions.scalaLogging,
-    ),
-    scalacOptions ++= {
-      CrossVersion.partialVersion(scalaVersion.value) match {
-//        case Some ((3, _)) => Seq("-Ytasty-reader")
-        case _             => Seq.empty
-      }
-    }
-  ).dependsOn(api, settings)
+    )
+  )
+  .dependsOn(api, settings)
+  .disablePlugins(AssemblyPlugin)
 
 lazy val core = (project in file("yupana-core"))
   .settings(
@@ -163,20 +168,18 @@ lazy val core = (project in file("yupana-core"))
   .dependsOn(api, settings, metrics, cache, utils % Test)
   .disablePlugins(AssemblyPlugin)
 
-
 lazy val hbase = (project in file("yupana-hbase"))
   .settings(
     name := "yupana-hbase",
     allSettings,
     scala3Settings,
-    pbSettings,
     libraryDependencies ++= Seq(
       "org.apache.hbase"            %  "hbase-common"                   % versions.hbase,
       "org.apache.hbase"            %  "hbase-client"                   % versions.hbase,
       "org.apache.hadoop"           %  "hadoop-common"                  % versions.hadoop,
       "org.apache.hadoop"           %  "hadoop-hdfs-client"             % versions.hadoop,
-      "com.thesamet.scalapb"        %% "scalapb-runtime"                % scalapbVersion                    % "protobuf"  exclude("com.google.protobuf", "protobuf-java"),
-      "com.google.protobuf"         %  "protobuf-java"                  % versions.protobufJava force(),
+      "io.circe"                    %% "circe-parser"                   % versions.circe,
+      "io.circe"                    %% "circe-generic"                  % versions.circe,
       "org.scalatest"               %% "scalatest"                      % versions.scalaTest                % Test,
       "org.scalamock"               %% "scalamock"                      % versions.scalaMock                % Test,
       "com.dimafeng"                %% "testcontainers-scala-scalatest" % "0.40.11"                         % Test
@@ -191,23 +194,22 @@ lazy val hbase = (project in file("yupana-hbase"))
   .dependsOn(core % "compile->compile ; test->test", cache, caffeine % Test)
   .disablePlugins(AssemblyPlugin)
 
-lazy val akka = (project in file("yupana-akka"))
+lazy val netty = (project in file("yupana-netty"))
   .settings(
-    name := "yupana-akka",
+    name := "yupana-netty",
     allSettings,
     scala3Settings,
     libraryDependencies ++= Seq(
-      "com.typesafe.akka"             %% "akka-actor"                 % versions.akka,
-      "com.typesafe.akka"             %% "akka-stream"                % versions.akka,
-      "com.typesafe.scala-logging"    %% "scala-logging"              % versions.scalaLogging,
-      "com.google.protobuf"           %  "protobuf-java"              % versions.protobufJava force(),
-      "org.scalatest"                 %% "scalatest"                  % versions.scalaTest                % Test,
-      "org.scalamock"                 %% "scalamock"                  % versions.scalaMock                % Test,
-      "com.typesafe.akka"             %% "akka-stream-testkit"        % versions.akka                     % Test
+      "com.typesafe.scala-logging"  %% "scala-logging"                 % versions.scalaLogging,
+      "io.netty"                    %  "netty-all"                     % versions.netty,
+      "com.typesafe.scala-logging"  %% "scala-logging"                 % versions.scalaLogging,
+
+      "ch.qos.logback"              %  "logback-classic"               % versions.logback             % Runtime,
+      "org.scalatest"               %% "scalatest"                     % versions.scalaTest           % Test,
+      "org.scalatestplus"           %% "scalacheck-1-17"               % versions.scalaTestCheck      % Test,
+      "org.scalamock"               %% "scalamock"                     % versions.scalaMock           % Test
     )
-  )
-  .dependsOn(proto, core, schema % Test)
-  .disablePlugins(AssemblyPlugin)
+  ).disablePlugins(AssemblyPlugin).dependsOn(api, core, protocol)
 
 lazy val spark = (project in file("yupana-spark"))
   .settings(
@@ -229,7 +231,15 @@ lazy val spark = (project in file("yupana-spark"))
       "javax.ws.rs" % "javax.ws.rs-api",
       "org.slf4j" % "slf4j-log4j12"
     ),
-    Test / fork := true
+    Test / fork := true,
+    Test / javaOptions ++= {
+      if (javaVersion.value > 8)
+        Seq(
+          "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+          "--add-opens", "java.base/sun.security.action=ALL-UNNAMED"
+        )
+      else Seq.empty
+    }
   )
   .dependsOn(core, cache, settings, hbase, externalLinks)
   .disablePlugins(AssemblyPlugin)
@@ -252,7 +262,8 @@ lazy val externalLinks = (project in file("yupana-external-links"))
     allSettings,
     scala3Settings,
     libraryDependencies ++= Seq(
-      "org.json4s"                  %% "json4s-jackson"             % versions.json4s,
+      "io.circe"                    %% "circe-parser"               % versions.circe,
+      "io.circe"                    %% "circe-generic"              % versions.circe,
       "org.scalatest"               %% "scalatest"                  % versions.scalaTest        % Test,
       "org.scalamock"               %% "scalamock"                  % versions.scalaMock        % Test,
       "com.h2database"              %  "h2"                         % versions.h2Jdbc           % Test,
@@ -308,6 +319,7 @@ lazy val examples = (project in file("yupana-examples"))
     allSettings,
     noPublishSettings,
     libraryDependencies ++= Seq(
+      "com.typesafe"                %  "config"                         % "1.4.3",
       "org.apache.spark"            %% "spark-core"                     % versions.spark                % Provided,
       "org.apache.spark"            %% "spark-sql"                      % versions.spark                % Provided,
       "org.apache.spark"            %% "spark-streaming"                % versions.spark                % Provided,
@@ -338,7 +350,7 @@ lazy val examples = (project in file("yupana-examples"))
     },
     assembly := assembly.dependsOn(writeAssemblyName).value
   )
-  .dependsOn(spark, akka, hbase, schema, externalLinks, ehcache % Runtime)
+  .dependsOn(spark, netty, hbase, schema, externalLinks, ehcache % Runtime)
   .enablePlugins(FlywayPlugin)
 
 lazy val benchmarks = (project in file("yupana-benchmarks"))
@@ -361,16 +373,18 @@ lazy val benchmarks = (project in file("yupana-benchmarks"))
       "org.slf4j" % "slf4j-log4j12"
     )
   )
+  .disablePlugins(AssemblyPlugin)
 
 lazy val docs = project
   .in(file("yupana-docs"))
-  .dependsOn(api, core)
+  .dependsOn(api, core, protocol)
   .enablePlugins(MdocPlugin, ScalaUnidocPlugin, DocusaurusPlugin)
+  .disablePlugins(AssemblyPlugin)
   .settings(
     scalaVersion := versions.scala213,
     moduleName := "yupana-docs",
     noPublishSettings,
-    ScalaUnidoc / unidoc / unidocProjectFilter := inProjects(api, core),
+    ScalaUnidoc / unidoc / unidocProjectFilter := inProjects(api, core, protocol),
     ScalaUnidoc / unidoc / target := (LocalRootProject / baseDirectory).value / "website" / "static" / "api",
     cleanFiles += (ScalaUnidoc / unidoc / target).value,
     docusaurusCreateSite := docusaurusCreateSite.dependsOn(Compile / unidoc).value,
@@ -410,13 +424,11 @@ lazy val versions = new {
   val scala213 = "2.13.12"
   val scala3 = "3.3.1"
 
-  val spark = "3.4.1"
+  val spark = "3.5.0"
 
   val threeTenExtra = "1.7.2"
 
-  val protobufJava = "2.6.1"
-
-  val scalaLogging = "3.9.4"
+  val scalaLogging = "3.9.5"
   val fastparse = "3.0.0"
   val scopt = "4.1.0"
   val prometheus = "0.16.0"
@@ -424,23 +436,23 @@ lazy val versions = new {
   val hbase = "2.4.1"
   val hadoop = "3.0.3"
 
-  val akka = "2.6.20"
+  val netty = "4.1.97.Final"
 
   val lucene = "6.6.0"
   val ignite = "2.8.1"
   val ehcache = "3.9.7"
   val caffeine = "2.9.3"
 
-  val json4s = "3.7.0-M11" // Same version with Spark
+  val circe = "0.14.5" // To have same cats version wuth Spark
 
   val flyway = "7.4.0"
-  val hikariCP = "3.4.5"
-  val logback = "1.2.12"
+  val hikariCP = "4.0.3"
+  val logback = "1.3.11"
   val h2Jdbc = "1.4.200"
   val postgresqlJdbc = "42.3.3"
 
-  val scalaTest = "3.2.16"
-  val scalaTestCheck = "3.2.16.0"
+  val scalaTest = "3.2.17"
+  val scalaTestCheck = "3.2.17.0"
   val scalaMock = "6.0.0-M1"
 }
 
@@ -464,12 +476,11 @@ val scalacSettings = Seq(
     "-deprecation",
     "-unchecked",
     "-feature",
-    "-Xfatal-warnings",
-    "-Wconf:msg=Top-level:s"
+    "-Xfatal-warnings"
   ) ++ {
     CrossVersion.partialVersion(scalaVersion.value) match {
       case Some((2, _)) => Seq(
-        "-Xlint",
+        "-Xlint:-byname-implicit,_",
         "-Xsource:2.13",
         "-Ywarn-dead-code"
       )
@@ -480,6 +491,10 @@ val scalacSettings = Seq(
     }
   },
   Compile / console / scalacOptions --= Seq("-Ywarn-unused-import", "-Xfatal-warnings"),
+  Test / testOptions += Tests.Argument("-l", "org.scalatest.tags.Slow"),
+  Test / parallelExecution := false,
+  coverageExcludedPackages := "<empty>;org\\.yupana\\.examples\\..*;org\\.yupana\\.hbase\\.proto\\..*;org\\.yupana\\.benchmarks\\..*",
+  headerLicense := Some(HeaderLicense.ALv2("2019", "Rusexpertiza LLC"))
 )
 
 val noPublishSettings = Seq(
@@ -509,13 +524,6 @@ val publishSettings = Seq(
   ),
   developers := List(
     Developer("rusexpertiza", "Rusexpertiza LLC", "info@1-ofd.ru", url("https://www.1-ofd.ru"))
-  )
-)
-
-val pbSettings = Seq(
-  PB.protocVersion := "2.6.1",
-  Compile / PB.targets := Seq(
-    scalapb.gen(grpc = false) -> (Compile / sourceManaged).value
   )
 )
 
